--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,78 @@
 /*
-Note for text colors:
-
-1. "Verified Graduate" has the same color as the person's name with 50% opacity
-2. Review paragraphs inside the quotations have the same color as well, but are at 70% opacity
-
-- Font size: 13px
-- Weights: 500, 600
+TODO:
+figure
+inner padding margin
+box shadow
+autofill
 */
-
 @import "default.css";
+
+/* ==== MAIN LAYOUT ==== */
+
+/* mobile */
+main{
+  /* padding: 1.5rem 0; */
+  margin: 5rem 0;
+}
+
+/* desktop */
+@media (min-width: 60em){
+  main{
+    min-height: 97vh;
+  }
+  footer{
+    min-height: 3vh;
+  }
+}
+
+/* ==== CARDS LAYOUT ==== */
+
+/* mobile & tablet */
+.wrapper{
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+}
+
+/* desktop */
+@media (min-width: 60em){
+
+  .wrapper{
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .one{
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
+  .two{
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+  }
+  .three{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  .four{
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+  }
+  .five{
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
+  }
+}
+
+/* ==== CARD STYLING ==== */
+
+section {
+  border-radius: 0.75rem;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1),
+              0 4px 3px 0 rgba(0, 0, 0, 0.05);
+}
+
+section > *{
+  padding: .75rem 3rem;
+}
+
+
