--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,3 @@
-/*
-TODO:
-figure
-inner padding margin
-box shadow
-autofill
-*/
 @import "default.css";
 
 /* ==== MAIN LAYOUT ==== */
@@ -115,3 +108,18 @@ section p{
   padding-bottom: 1.75rem;
 }
 
+.one {
+  position: relative;
+}
+
+.one h3{
+  position: relative;
+  z-index: 2;
+}
+
+.quote-img{
+  position: absolute;
+  top: 0;
+  right: 10%;
+  z-index: 1;
+}
