--- a/styles/main.css
+++ b/styles/main.css
@@ -28,32 +28,17 @@ main{
 }
 
 /* desktop */
-@media (min-width: 60em){
+@media (min-width: 65em){
 
   .wrapper{
     grid-template-columns: repeat(4, 1fr);
   }
 
-  .one{
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-  }
-  .two{
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-  }
-  .three{
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-  .four{
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
-  }
-  .five{
-    grid-column: 4 / 5;
-    grid-row: 1 / 3;
-  }
+  .one{ grid-area: 1 / 1 / 2 / 3; }
+  .two{ grid-area: 1 / 3 / 2 / 4; }
+  .three{ grid-area: 2 / 1 / 3 / 2; }
+  .four{ grid-area: 2 / 2 / 3 / 4; }
+  .five{ grid-area: 1 / 4 / 3 / 5; }
 }
 
 /* ==== CARD STYLING ==== */
